--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -104,6 +104,8 @@
         {% endblock %}
     </head>
     <body>
+        {% include "_partials/header.html.twig" %}
         {% block body %}{% endblock %}
+        {% include "_partials/footer.html.twig" %}
     </body>
 </html>
